# Crypto-Api-Test-Assignment

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: mongodb.py
app/models/: crypto.py
app/services/: openai_service.py  report_generator.py
