[project]
name = "ceypto-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Viktor",email = "61793971+afanasjewww@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "openai (>=1.63.0,<2.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
